Fix issue with text alignment
QADP-93: Ribbon is to be displayed on all pages after site or sponsor selection.

--- a/src/main/frontend/src/app/site-spons-select/site-spons-select.component.css
+++ b/src/main/frontend/src/app/site-spons-select/site-spons-select.component.css
@@ -32,6 +32,9 @@ button {
   text-align: center;
   color: black;
   font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button:hover {
