--- a/src/main/frontend/src/app/site-team-data-select/site-team-data-select.component.css
+++ b/src/main/frontend/src/app/site-team-data-select/site-team-data-select.component.css
@@ -15,7 +15,6 @@ img {
   transition: transform 0.3s ease-in-out;
 }
 
-/* Style for Extra Large Screen */
 button {
   width: 300px;
   max-width: 100%;
@@ -32,6 +31,9 @@ button {
   text-align: center;
   color: black;
   font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button:hover {
